# fixed_point

./: .gitignore  CMakeLists.txt
src/: main.cpp  print.h
src/fixed_point_lib/: fixed_point.h  meta.h
